--- a/.htaccess
+++ b/.htaccess
@@ -14,6 +14,9 @@
     RewriteCond %{REQUEST_URI} (.+)/$
     RewriteRule ^ %1 [L,R=301]
 
+    # ★★★ TAMBAHKAN INI - Redirect /storage to /public/storage ★★★
+    RewriteRule ^storage/(.*)$ public/storage/$1 [L]
+
     # Send Requests To Front Controller...
     RewriteCond %{REQUEST_FILENAME} !-d
     RewriteCond %{REQUEST_FILENAME} !-f
